# pod_lca

./: .bumpversion.cfg  .gitignore  AUTHORS.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  config.yaml  conftest.py  nx.html  pyproject.toml  requirements-dev.txt  requirements-rhino.txt  requirements.txt  setup.py  tasks.py
config/: key.txt
data/: BA_consumption_impacts.csv  BA_zip_mapping.csv  FERC_BA_consumption_impacts.csv  FERC_BA_mapping.csv  FERC_consumption_impacts.csv  FERC_zip_mapping.csv  FLCAC_heating_values.csv  FLCAC_nonrenewable_fuels.csv  FLCAC_renewable_fuels.csv  GEA_zip_mapping.csv  National_consumption_impacts.csv  README.md  REEDS_BA_zip_mapping.csv  Regional_consumption_impacts_by_technology.csv  US Elec Baseline_AR5_1_3_24.csv  US Elec Baseline_AR5_1_3_24KIUN.csv  USLCI_AR5_1_24_25.csv  USLCI_Categorized.csv  USLCI_Categorized_all.csv  USLCI_Categorized_uuid.csv  USLCI_elec.csv  USLCI_heating_values.csv  USLCI_nonrenewable_fuels.csv  USLCI_renewable_fuels.csv  USLCI_tax_elec_1L_ISO21930_1_24_25.csv  base_units.csv  building_ashrae_service-life.csv  building_ashrae_sevice-life.csv  building_ashrae_waste-rate.csv  building_podlca_default-impact-database-entry-mapping.csv  building_podlca_eui.csv  building_rics_sevice-life.csv  building_rics_waste-rate.csv  buildings_podlca_drf-categoris.csv  buildings_podlca_template-models-roofing.csv  buildings_podlca_template-models-structure.csv  cambium_data_national.csv  cambium_technology_map.json  carbon_podlca_bio-material-data.csv  concrete_example.csv  (+78 more)
data_generators/: Transportation_domestic_generate.py  Transportation_global_generate.py
docs/: README.txt  api.rst  conf.py  index.rst
examples/: README.md  building_template_commercial.py  building_template_residential.py  carbon-storage_biogenic-carbon.py  drf_example-generate-data-series.py  drf_example_calculator-methods.py  drf_example_drf-record.py  electricity_example-advanced.py  electricity_example-data-distributions.py  electricity_example-simple.py  electricity_example-time-series.py  eol_example-bamboo-roof.py  eol_example-building-scale.py  eol_example-concrete-structure.py  eol_example-material_scale.py  eol_example-window.py  impacts_data-search.py  impacts_example_carbon-storage.py  impacts_example_electricity-swapping.py  impacts_olca-data-import-FLCAC.py  impacts_olca-data-import-ecoinvent391.py  material_clt-example.py  material_concrete-example-uncertainty.py  material_concrete-example.py  plotter_radar-chart-example.py  transportation_clt-example-transportation.py  transportation_example-domestic.py  transportation_example-global.py  transportation_example.py  uncertainty_clt-example-data-quality.py  uncertainty_clt-example-mcs-1.py  uncertainty_clt-example-mcs-2.py  uncertainty_clt-example-mcs_1.py  uncertainty_clt-example-sensitivity.py  uncertainty_clt_example-samcs.py  visualizer_bar-chart-example-1.py  visualizer_bar-chart-example-2.py  visualizer_bar-chart-example-3.py  visualizer_radar-chart-example.py
save_files/: DRF_timeseries.csv  README.md  drf_record_temp.csv  electricity_city_values.csv  test.pkl  transportation_dataset_temp.csv  unit_test.pkl
scripts/: 003.gh  Building_template_1.py  Building_template_script.py  CLT_example.py  CLT_example_data_quality.py  CLT_example_transportation.py  CLT_example_uncertainty.py  CLT_example_uncertainty_mcs_1.py  CLT_example_uncertainty_mcs_2.py  CLT_example_uncertainty_samcs.py  README.txt  Template_Model_BOM.csv  Template_Model_data.json  carbon storage.py  (+63 more)
(+1211 files in other folders)
