[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pod_lca"
version = "0.1.0"
description = "pod_lca is a python library to carry out life cycle assessment of novel building materials and buildings."
requires-python = ">= 3.9"
dependencies = [
    "matplotlib >= 3.9",
    "numpy >= 1.26",
    "pandas >= 2.2",
    "PyYAML >= 6.0",
    "scipy >= 1.14",
    "geopy >= 2.4"
]
authors = [
    {name = "Tomás Méndez Echenagucia", email = "tmendeze@uw.edu"},
    {name = "Kavinda Isuru Nanayakkara", email = "kiun@uw.edu"},
    {name = "Mohammad Tabatabaei Manesh", email = "mhtaba@uw.edu"},
    {name = "Ethan Ellingboe", email = "etel5501@uw.edu"}
]
maintainers = [
    {name = "Tomás Méndez Echenagucia", email = "tmendeze@uw.edu"}
]
license-files = ["LICENSE", "AUTHORS.md"]

[project.optional-dependencies]
olca = [
    "olca-ipc",
    "olca_schema"
]
search = [
    "scikit-learn >= 1.7",
    "nltk > 3.9"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["legacy*", "ui*"]
namespaces = false

[tool.setuptools.package-data]
pod_lca = ["config.yaml"]
"pod_lca.data" = ["*.json", "*.csv", "*.idf"]

[tool.black]
line-length = 120

[tool.pydocstyle]
convention = "numpy"
add-ignore = ["D419", "D107", "D203"]
